changedump of progress

--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
     "default": {
       "url": "http://localhost:9200",
       "num_workers": 4,
-      "bulk_size": 128
+      "bulk_size": 3
     }
   },
   "indexes": [
@@ -11,7 +11,7 @@
       "bind": "udp:localhost:5678",
       "cluster": "default",
       "prefix": "test-",
-      "mapping": "test",
+      "type": "test",
       "date_format": "2006.01.02.15",
       "transformer": {
         "name": "direct"
@@ -22,8 +22,7 @@
     {
       "name": "test",
       "fields": {
-        "key": "keyword",
-        "ip": "ip"
+        "test": "text"
       }
     }
   ]
