Support toggling whether a field is indexed, build stufff

--- a/config.json
+++ b/config.json
@@ -22,7 +22,10 @@
     {
       "name": "test",
       "fields": {
-        "test": "text"
+        "test": {
+          "type": "text",
+          "index": true
+        }
       }
     }
   ]
