Add support for TCP framing
Previously TCP would not work properly

--- a/config.json
+++ b/config.json
@@ -9,7 +9,9 @@
       "server": {
         "type": "tcp",
         "bind": "localhost:5678"
-      }
+      },
+      "debug": true,
+      "octet_counted": true
     }
   },
   "types": {
