--- a/config.json
+++ b/config.json
@@ -40,6 +40,7 @@
     "magic-word-found": {
       "type": "match",
       "sources": [],
+      "rollup_window": 2,
       "config": {
         "source": "content",
         "match": "^ magic.*",
