--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,9 @@ language: go
 go:
   - 1.8.x
 
-script: go test -t -v ./...
+script:
+  - go get github.com/stretchr/testify/assert
+  - go test -t -v lib/syslog
 
 install:
   - go get github.com/hammerandchisel/punt/cmd/puntd
