--- a/config.json
+++ b/config.json
@@ -43,6 +43,14 @@
       }
     }
   },
+  "gc": {
+    "test-": {
+      "keep": 1
+    },
+    "logs-": {
+      "keep": 5
+    }
+  },
   "mappings": {
     "test": {
       "fields": {
